--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<meta name="description" content="Simple, elegant Perl web framework for
-            fun, rapid web application development"" />
+	<meta name="description" content="Simple, elegant Perl web framework for fun, rapid web application development" />
 	<meta name="keywords" content="perl,framework,web" />
 	<meta name="author" content="Pixelefant" />
 	<meta name="robots" content="index,follow" />
@@ -26,26 +25,6 @@
 		<h2>The easiest way to write web applications in Perl</h2>
 
 		
-		<!-- START NAV LEFT -->
-		<ul id="nav-left" class="clearme listreset">
-			<li><a href="/">overview</a></li>
-			<li class="nav-sep"></li>
-			<li><a href="/quickstart">quick start</a></li>
-
-		</ul>
-		<!-- END NAV LEFT -->
-		
-		<!-- START NAV RIGHT -->
-		<ul id="nav-right" class="clearme listreset">
-			<li><a href="/documentation" title="Documentation">docs</a></li>
-			<li class="nav-sep"></li>
-			<li><a href="/contribute" title="Contributing to the
-                        project">contribute</a></li>
-			<li class="nav-sep"></li>
-
-			<li><a href="/dancefloor" title="Who's using Dancer">dance floor</a></li>
-		</ul>
-		<!-- END NAV RIGHT -->
 			
 	</div>
 	<!-- END HEADER -->
