--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,13 @@
 /*---------------------------------------------------------------------------------------
 	COMMON DECLARATIONS
 ---------------------------------------------------------------------------------------*/
-html,body{ background: #2a2a2a url(/images/dcr-bkg-body.jpg) 0 0 repeat-x;}
-.clearme:after{ content: "."; display: block; visibility: hidden; clear: both; height: 0; font-size: 0.1em; line-height: 0;}
+html,body{ 
+    background: #2a2a2a 
+    url(/images/dcr-bkg-body.jpg) 0 0 repeat-x;
+}
+
+.clearme:after{ 
+    content: "."; display: block; visibility: hidden; clear: both; height: 0; font-size: 0.1em; line-height: 0;}
 a{ text-decoration: none;}
 
 
@@ -27,7 +32,7 @@ a{ text-decoration: none;}
 	#header{
 		position: relative;
 	 	width: 974px;
-	 	height: 394px;
+	 	height: 250px;
 	 	margin: auto;
 	}
 		
@@ -49,7 +54,6 @@ a{ text-decoration: none;}
 		h1 a{
 			display: block;
 			text-indent: -9999px;
-			background: url(/images/dcr-header-logo.png) 0 0 no-repeat;
 		}
 		
 		h2{
