--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -1,27 +1,38 @@
-<h2>Dancer's Documentation</h2>
+<h3>Developement</h3>
 
 <p>
-The documentation is available on 
-<a href="http://search.cpan.org/dist/Dancer/">Dancer's CPAN page</a>.
-
-The documentation has been divided into sections in order to 
-make the reading more comfortable.
+If you want to start writing your first application with Dancer, you certainly
+want to read the 
+<a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Introduction.pod">Introduction guide</a>. 
+It will help you understand the basics of Dancer.
 </p>
 
-<ul>
-<li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer.pm">Dancer</a> : 
-	the main documentation, explaining all the details you want about Dancer's syntax.</li>
-<li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Cookbook.pod">Dancer::Cookbook</a> :
-        a quick-start guide with lots of examples to get you dancing
-        quickly</li>
-<li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Config.pm">Dancer::Config</a> : 
-	details about configuration files for your application</li>
-<li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Session.pm">Dancer::Session</a> 
-	: detail about session support and usage</li>
-<li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Deployment.pod">Dancer::Deployment</a> : details and examples about how to deploy a Dancer application using <a href="http://plackperl.org">Plack</a>.</li>
-</ul>
+<p>
+You can also find interesting and working examples in the 
+<a
+href="http://search.cpan.org/dist/Dancer/lib/Dancer/Cookbook.pod">Cookbook</a>.
+There are lots of recipes in there to help you hanlde common patterns in web
+development.
+</p>
+
+<p>
+The DSL's reference API is documentend in 
+<a href="http://search.cpan.org/dist/Dancer/lib/Dancer.pm">Dancer.pm</a>.
+</p>
+
+
+<h3>Deployment</h3>
+
+<p>
+Dancer is PSGI-compatible, that means you can virtually deploy your app
+anywhere. We wanted to help ou users as much as possible, so we've gathered as
+much details as possible in a 
+<a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Deployment.pod">Deployment Guide</a>, 
+in order to provide working configuration examples.
+</p>
 
 <p>
 Even though a special care is given to documentation, there might be some 
-errors, so feel free to <a href="/about">contact the development team</a> if you find one.
+errors, so feel free to <a href="/about">contact the development team</a> if
+you find any.
 </p>
