--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -2,14 +2,15 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
-	<meta name="description" content="the famous Google'six lines..." />
-	<meta name="keywords" content="" />
-	<meta name="author" content="Pixelefant" />
+	<title><% if title %><% title %><% else %>PerlDancer - The easiest way to write web applications with Perl<% end %></title>
+	<meta name="description" content="PerlDancer is a micro web-application framework for Perl, designed to be as effortless as possible for the developer. With PerlDancer, web development is fun again. It's a very expresive DSL for writing web applications with tons of plugins and a very dynamic community." />
+	<meta name="keywords" content="Perl, Dancer, PerlDancer, framework, micro framework, web, web application, webapps" />
+	<meta name="author" content="Alexis Sukrieh" />
 	<meta name="robots" content="index,follow" />
-	<meta name="copyright" content="" />
+	<meta name="copyright" content="Copyright 2009-2011 Alexis Sukrieh" />
 
 	<link rel="stylesheet" href="/css/style.css" media="screen" />
+	<link rel="stylesheet" href="/css/tweets.css" media="screen" />
 	<!--[if gte IE 7]>
 		<link rel="stylesheet" href="/css/styleIE.css" />
 	<![endif]-->
@@ -18,35 +19,44 @@
 	<link href="/css/prettify.css" type="text/css" rel="stylesheet" />
 	<script type="text/javascript" src="/javascripts/prettify.js"></script>
 
+	<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript">/* <![CDATA[ */
+    !window.jQuery && document.write('<script type="text/javascript" src="/javascripts/jquery.js"><\/script>')
+	/* ]]> */</script>
+
+
 </head>
 <body onload="prettyPrint()">
+
 <!-- START WAPPER HEADER -->
 <div id="wrapper-header">
 			
 	<!-- START HEADER -->
 	<div id="header">
 	
-		<h1><a href="index.html">Perl Dancer | Perl is fun again</a></h1>
+		<h1><a href="/">Perl Dancer | Perl is fun again</a></h1>
 		<h2>The easiest way to write web applications in Perl</h2>
 
 		
 		<!-- START NAV LEFT -->
 		<ul id="nav-left" class="clearme listreset">
-			<li><a href="">overview</a></li>
+			<li><a href="/quickstart">Quick Start</a></li>
 			<li class="nav-sep"></li>
-			<li><a href="">quick start</a></li>
+			<li><a href="/documentation">Documentation</a></li>
 
 		</ul>
 		<!-- END NAV LEFT -->
 		
 		<!-- START NAV RIGHT -->
 		<ul id="nav-right" class="clearme listreset">
-			<li><a href="">docs</a></li>
-			<li class="nav-sep"></li>
-			<li><a href="">contribute</a></li>
+			<li><a href="/contribute">Contribute</a></li>
 			<li class="nav-sep"></li>
 
-			<li><a href="">dance floor</a></li>
+			<li><a href="/dancefloor">Dancers</a></li>
+			<li class="nav-sep"></li>
+
+			<li><a href="/about">About</a></li>
 		</ul>
 		<!-- END NAV RIGHT -->
 			
@@ -69,6 +79,10 @@
 
 	<div id="contain-bottom"></div>
 	
+<div class="twitter" id="jstweets">
+<a href="http://twitter.com/PerlDancer/">On Twitter</a>: 
+</div>
+
 	<div id="copyright">Dancer is copyright © 2009-2011 <a href="http://sukria.net/" rel="external">Alexis Sukrieh</a> - <a href="http://github.com/sukria/Dancer/" rel="external">Fork on GitHub</a> - This website is <a href="http://github.com/sukria/perldancer-website/" rel="external">free software</a>.</div>
 
 </div>
@@ -80,6 +94,20 @@
 
 <a href="http://github.com/sukria/Dancer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
+
+<script type="text/javascript">
+$.getJSON("http://twitter.com/statuses/user_timeline.json?screen_name=perldancer&count=1&callback=?",
+		function(data){
+		$.each(data, function(i,item){
+			ct = item.text;
+			ct = ct.replace(/http:\/\/\S+/g,  '<a href="$&" >$&</a>');
+			ct = ct.replace(/\s(@)(\w+)/g,    ' @<a href="http://twitter.com/$2" >$2</a>');
+			ct = ct.replace(/\s(#)(\w+)/g,    ' #<a href="http://search.twitter.com/search?q=%23$2" >$2</a>');
+			$("#jstweets").append(' <span>'+ct +'</span> ');
+			});
+		});
+
+</script>
 
 </body>
 </html>
