add Supid Twitter Stats to dancefloor

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -31,5 +31,11 @@ Its <a href="http://github.com/kappa/app-cpanhubble">source code</a> is availabl
 <a href="http://search.cpan.org/~data/">Danijel Tašov</a>.
 The <a href="http://github.com/datamuc/Pastedance">source code</a> available on Github.
 </li>
+
+<li>
+<a href="http://stupidtwitterstats.com/">Stupid Twitter Stats</a> is a tiny webapp that shows 
+some stats about a Twitter account.
+</li>
+
 </ul>
 
