--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -1,4 +1,4 @@
-<h3>Developement</h3>
+<h3>Development</h3>
 
 <p>
 If you want to start writing your first application with Dancer, you certainly
@@ -12,11 +12,13 @@ You can also find interesting and working examples in the
 <a
 href="http://search.cpan.org/dist/Dancer/lib/Dancer/Cookbook.pod">Cookbook</a>.
 There are lots of recipes in there to help you hanlde common patterns in web
-development.
+development.  The <a
+href="http://search.cpan.org/dist/Dancer/lib/Dancer/Tutorial.pod">Tutorial</a>
+also helps if you like to learn by example.
 </p>
 
 <p>
-The DSL's reference API is documentend in 
+The DSL's reference API is documented in 
 <a href="http://search.cpan.org/dist/Dancer/lib/Dancer.pm">Dancer.pm</a>.
 </p>
 
@@ -26,13 +28,13 @@ The DSL's reference API is documentend in
 <p>
 Dancer is PSGI-compatible, that means you can virtually deploy your app
 anywhere. We wanted to help our users as much as possible, so we've gathered as
-much details as possible in a 
+many details as possible in a 
 <a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Deployment.pod">Deployment Guide</a>, 
 in order to provide working configuration examples.
 </p>
 
 <p>
-Even though a special care is given to documentation, there might be some 
+Even though special care is given to documentation, there might be some 
 errors, so feel free to <a href="/about">contact the development team</a> if
 you find any.
 </p>
