--- a/views/about.tt
+++ b/views/about.tt
@@ -2,7 +2,8 @@
 <p>
 Dancer was inspired by <a href="http://www.sinatrarb.com">Sinatra</a> 
 and has been written by <a href="http://twitter.com/sukria">Alexis Sukrieh</a>.
-Many more authors now contribute to the project - see the AUTHORS file shipped
+Many more authors now contribute to the project - see the 
+<a href="http://search.cpan.org/dist/Dancer/AUTHORS">AUTHORS</> file shipped
 with the distribution for the core team, and thanks to all those who have
 contributed features/patches and assistance via GitHub.
 </p>
@@ -17,7 +18,10 @@ Dancer is free software, it is released under the same terms as Perl itself.
 
 <p>
 Feel free to <a
-href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe to the mailing list</a> if you want to contact users and developers of the project. You can also check out the archives <a href="http://lists.perldancer.org/pipermail/dancer-users/">here</a>.
+href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe to 
+the mailing list</a> if you want to contact users and developers of the project. 
+You can also <a href="http://lists.perldancer.org/pipermail/dancer-users/">read
+the list archives</a>.
 </p>
 
 <p>
