Another typo on /quickstart

--- a/views/quickstart.tt
+++ b/views/quickstart.tt
@@ -10,7 +10,7 @@ curl -L http://cpanmin.us | perl - --sudo Dancer
 </pre>
 
 <p>
-Of course, your can use any other CPAN client to do so, or even 
+Of course, you can use any other CPAN client to do so, or even 
 <a href="http://search.cpan.org/perldoc?Dancer">install it by hand</a>.
 </p>
 
