--- a/views/about.tt
+++ b/views/about.tt
@@ -3,7 +3,7 @@
 Dancer was inspired by <a href="http://www.sinatrarb.com">Sinatra</a> 
 and has been written by <a href="http://twitter.com/sukria">Alexis Sukrieh</a>.
 Many more authors now contribute to the project - see the 
-<a href="http://search.cpan.org/dist/Dancer/AUTHORS">AUTHORS</> file shipped
+<a href="http://search.cpan.org/dist/Dancer/AUTHORS">AUTHORS</a> file shipped
 with the distribution for the core team, and thanks to all those who have
 contributed features/patches and assistance via GitHub.
 </p>
