Add ijedomestics.co.uk to /dancefloor page

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -43,5 +43,10 @@ GitHub.
 webapp that shows some stats about a Twitter account.
 </li>
 
+<li>
+<a href="http://www.ijedomestics.co.uk/">IJE Domestic Appliance Repairs</a>
+is a basic Dancer-powered site written by David Precious.
+</li>
+
 </ul>
 
