add PEG to the dancefloor

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -77,4 +77,10 @@ webapp that shows some stats about a Twitter account.
 is a basic Dancer-powered site written by David Precious.
 </li>
 
+<li>
+<a href="http://perl-ecosystem.org/">Perl Ecosystem Group</a>, official website
+of the organization: "bridging the gap between business and the open source
+Perl community".
+</li>
+
 </ul>
