Contribute page improvements.
Indicate that bug reports via GitHub issues are preferred.

Explain what donations are needed for.

--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -49,9 +49,9 @@ that's really great. At the time, the best way to get a review is to request a p
 
 <p>
 (If you're not a GitHub user or don't want the hassle of forking the repo,
-patches submitted via email to <a href="#mailing-list">the mailing list</a> 
-are appreciated too, but pull requests via GitHub are much easier for us to 
-track and apply, and thus have a much better chance of being applied!)
+patches submitted via email to the mailing list are appreciated too, but pull
+requests via GitHub are much easier for us to track and apply, and thus have a
+much better chance of being applied!)
 </p>
 
 <a name="donate"></a>
