--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -25,9 +25,13 @@ commit some ideas to the crew.
 
 <p>
 So you're using it and you've found a bug, that's great! Yes, Great. Because a
-bug found is a bug in the way of being fixed. <a
-href="http://rt.cpan.org/Public/Bug/Report.html?Queue=Dancer">Report it</a>, 
-but take care it's not yet filled before.
+bug found is a bug in the way of being fixed. Please do <a
+href="https://github.com/sukria/Dancer/issues">report it</a> - reports via the
+<a href="https://github.com/sukria/Dancer/issues">GitHub issues</a> system are
+preferred as our development is coordinated on GitHub, but bug reports to the 
+<a
+href="http://rt.cpan.org/Public/Bug/Report.html?Queue=Dancer">rt.cpan.org 
+queue</a> are fine too.
 </p>
 
 <h3>Submit Patches</h3>
@@ -39,10 +43,20 @@ that's really great. At the time, the best way to get a review is to request a p
 <a href="http://github.com/sukria">sukria</a>.
 </p>
 
+<p>
+(If you're not a GitHub user or don't want the hassle of forking the repo,
+patches submitted via email to the mailing list are appreciated too, but pull
+requests via GitHub are much easier for us to track and apply, and thus have a
+much better chance of being applied!)
+</p>
+
+
 <h3>Donate</h3>
 
 <p>
-If you want to support the team, you can also <a href="/donate">donate</a>.
+If you want to support the team, you can also <a href="/donate">donate</a> -
+donations will be used to support development efforts, for instance paying for
+travel to conferences etc.
 </p>
 
 <h3>Join us on IRC</h3>
