--- a/views/index.tt
+++ b/views/index.tt
@@ -173,6 +173,18 @@ development.</cite>
 tsjr on reddit</a>
 </p>
 
+
+<p style="display: none;">
+<cite>
+...there's finally a web framework that works for me. It's called Dancer, and 
+as redundant as this might sound; Dancer, is an effortless web framework. [...]
+It took me more time studying Dancer's features and specs, than the time it 
+took for me to write the whole mini-blog app.
+</cite>
+- <a href="http://log.gnusosa.net/more-dance">Carlos Ivan Sosa (gnusosa)</a>
+</p>
+
+
 </div>
 </div>
 
