Adding Google Webmaster Tools verification meta tag.

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -8,6 +8,7 @@
 	<meta name="author" content="Alexis Sukrieh" />
 	<meta name="robots" content="index,follow" />
 	<meta name="copyright" content="Copyright 2009-2011 Alexis Sukrieh" />
+        <meta name="google-site-verification" content="XINoghSibCxQxEzULZIDt-a_E0kWTQU7k54qPKwlLMw" />
 
 	<link rel="stylesheet" href="/css/style.css" media="screen" />
 	<link rel="stylesheet" href="/css/tweets.css" media="screen" />
