Add quote from Michael Schwern via Twitter.

--- a/views/index.tt
+++ b/views/index.tt
@@ -75,6 +75,14 @@ It's fast! It's simple! It's minimalistic! I really like it! Thanks.
 - Łukasz Metys Lewandowski 
 </p>
 
+
+<p style="display: none;">
+<cite>
+Dancer is the first web framework that hasn't given me an aneurysm. #perl
+</cite>
+- <a href="http://twitter.com/#!/schwern/status/38484901841870848">@schwern</a>
+</p>
+
 <p style="display: none;">
 <cite>
 Got my webservice up and running in 1 day with no knowledge about Dancer
